# mozc

src/: .bazelrc  MODULE.bazel
src/bazel/: BUILD.azookey_dlls.bazel  BUILD.azookey_dlls_arm64.bazel
src/converter/: BUILD.bazel  azookey_immutable_converter.cc  azookey_immutable_converter.h  converter.cc  engine_config.h
src/engine/: BUILD.bazel  engine.cc  engine_converter.cc
src/gui/about_dialog/: BUILD.bazel  about_dialog.cc  about_dialog.ui
src/gui/tool/: BUILD.bazel  mozc_tool_libmain.cc
src/gui/zenzai_download/: BUILD.bazel  zenzai_download_dialog.cc  zenzai_download_dialog.h  zenzai_download_dialog_libmain.cc
src/ipc/: ipc_path_manager.cc  win32_ipc.cc
src/renderer/: renderer_client.cc
src/server/: BUILD.bazel  mozc_server_main.cc
src/session/: session.cc
src/win32/custom_action/: custom_action.cc  custom_action.def
src/win32/installer/: BUILD.bazel  build_installer.py  installer_oss_64bit.wxs
