# Build file for AzooKey DLLs external repository.
# This file exports all DLLs needed for the AzooKey IME engine.

package(default_visibility = ["//visibility:public"])

# AzooKey engine main DLL
exports_files([
    "azookey-engine.dll",
])

# Swift Runtime DLLs
exports_files([
    "swiftCore.dll",
    "swiftCRT.dll",
    "swiftDispatch.dll",
    "swift_Concurrency.dll",
    "swiftWinSDK.dll",
])

# Foundation DLLs
exports_files([
    "Foundation.dll",
    "FoundationEssentials.dll",
    "FoundationInternationalization.dll",
    "_FoundationICU.dll",
])

# Dispatch and Blocks Runtime
exports_files([
    "BlocksRuntime.dll",
    "dispatch.dll",
])

# llama.cpp DLLs for Zenzai AI
exports_files([
    "ggml.dll",
    "ggml-base.dll",
    "ggml-cpu.dll",
    "ggml-vulkan.dll",
    "llama.dll",
    "llava_shared.dll",
    "mtmd.dll",
])

# Filegroup containing all AzooKey-related DLLs
filegroup(
    name = "all_dlls",
    srcs = [
        "azookey-engine.dll",
        "swiftCore.dll",
        "swiftCRT.dll",
        "swiftDispatch.dll",
        "swift_Concurrency.dll",
        "swiftWinSDK.dll",
        "Foundation.dll",
        "FoundationEssentials.dll",
        "FoundationInternationalization.dll",
        "_FoundationICU.dll",
        "BlocksRuntime.dll",
        "dispatch.dll",
        "ggml.dll",
        "ggml-base.dll",
        "ggml-cpu.dll",
        "ggml-vulkan.dll",
        "llama.dll",
        "llava_shared.dll",
        "mtmd.dll",
    ],
)
