# Build file for AzooKey DLLs external repository (ARM64).
# This file exports all DLLs needed for the AzooKey IME engine on ARM64.

package(default_visibility = ["//visibility:public"])

# AzooKey engine main DLL
exports_files([
    "azookey-engine.dll",
])

# Swift Runtime DLLs
exports_files([
    "swiftCore.dll",
    "swiftCRT.dll",
    "swiftDispatch.dll",
    "swift_Concurrency.dll",
    "swiftWinSDK.dll",
])

# Foundation DLLs
exports_files([
    "Foundation.dll",
    "FoundationEssentials.dll",
    "FoundationInternationalization.dll",
    "_FoundationICU.dll",
])

# Dispatch and Blocks Runtime
exports_files([
    "BlocksRuntime.dll",
    "dispatch.dll",
])

# llama.cpp DLLs for Zenzai AI (ARM64 - no Vulkan)
exports_files([
    "ggml.dll",
    "ggml-base.dll",
    "ggml-cpu.dll",
    "llama.dll",
])

# Filegroup containing all AzooKey-related DLLs (ARM64)
filegroup(
    name = "all_dlls",
    srcs = [
        "azookey-engine.dll",
        "swiftCore.dll",
        "swiftCRT.dll",
        "swiftDispatch.dll",
        "swift_Concurrency.dll",
        "swiftWinSDK.dll",
        "Foundation.dll",
        "FoundationEssentials.dll",
        "FoundationInternationalization.dll",
        "_FoundationICU.dll",
        "BlocksRuntime.dll",
        "dispatch.dll",
        "ggml.dll",
        "ggml-base.dll",
        "ggml-cpu.dll",
        "llama.dll",
    ],
)
